--- a/index.html
+++ b/index.html
@@ -36,77 +36,10 @@
       </div>
     </div>
   </nav>
-  
-<div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3 style="text-align: center;">Fortnite</h3>
-      <p>Fortnite is a popular online video game developed by Epic Games that combines elements of survival, shooting, and building in a battle royale format.</p>
-      <p>The latest version of Fortnite is 26.20.0-28096793-Android, which was released on September 26, 2023.</p>
-    </div>
-    <div class="col-sm-4">
-      <h3 style="text-align: center;">Ratchet & Clank: Rift Apart</h3>
-      <p>Ratchet & Clank is a series of action-adventure platform and third-person shooter video games created and developed by Insomniac Games and published by Sony Interactive Entertainment for PlayStation consoles, such as PlayStation 2, PlayStation 3, PlayStation 4, and PlayStation 5</p>
-      <p>The latest installment in the series is Ratchet & Clank: Rift Apart, which was released on July 26, 2023</p>
-    </div>
-    <div class="col-sm-4">
-      <h3 style="text-align: center;">Splatoon 3</h3>        
-      <p>Splatoon is a third-person shooter video game franchise created by Hisashi Nogami and Shintaro Sato, and developed and owned by Nintendo.</p>
-      <p>The latest version of Splatoon is 5.0.0, which was released on August 30, 2023 1. This version includes new gear, titles, and weapons, as well as adjustments to the game's multiplayer modes, including Salmon Run and Story Mode</p>
-    </div>
-  </div>
-</div>
-
-<!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    </div>
-    
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/fortnite.jpg" alt="Fortnite" class="d-block" style="width:100%">
-        <div class="carousel-caption">
-          <h3 style="background-color: black;">Fortnite</h3>
-          <p style="background-color: black;">A game by Epic Games!</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/ratchetandclank.jpg" alt="Ratchet & Clank" class="d-block" style="width:100%">
-        <div class="carousel-caption">
-          <h3 style="background-color: black;">Ratchet & Clank: Rift Apart</h3>
-          <p style="background-color: black;">A game by Insomniac Games!</p>
-        </div> 
-      </div>
-      <div class="carousel-item">
-        <img src="assets/splatoon3.jpg" alt="Splatoon 3" class="d-block" style="width:100%">
-        <div class="carousel-caption">
-          <h3 style="background-color: black;">Splatoon 3</h3>
-          <p style="background-color: black;">A game by Nintendo Entertainment Planning & Development!</p>
-        </div>  
-      </div>
-    </div>
-    
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-
-  
-
-
 
 <!-- accordian-->
 <div class="accordion" id="accordionExample">
+
   <!-- accordian 1-->
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -164,6 +97,12 @@
         </div>
     </div>
   </div>
+  <div class="card" style="width: 300px;">
+    <div class="card-body text-center">
+        <h5 class="card-title">About</h5>
+        <p class="card-text">Hello there and welcome to my website! I am a 3rd Year student at UWS. Here, you can see some of the elements I have developed, utilising HTML, CSS, JavaScript and BabylonJS. I hope you enjoy.</p>
+    </div>
+</div>
 </div>
 </body>
 </html>
