--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Elements</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Element 1</a></li>
-              <li><a class="dropdown-item" href="#">Element 2</a></li>
-              <li><a class="dropdown-item" href="#">Element 3</a></li>
-              <li><a class="dropdown-item" href="#">Element 4</a></li>
+              <li><a class="dropdown-item" href="./distribute01/index.html">Element 1</a></li>
+              <li><a class="dropdown-item" href="./distribute02/index.html">Element 2</a></li>
+              <li><a class="dropdown-item" href="./distribute03/index.html">Element 3</a></li>
+              <li><a class="dropdown-item" href="./distribute04/index.html">Element 4</a></li>
             </ul>
           </li>
         </ul>
@@ -49,7 +49,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Fortnite is a popular online video game developed by Epic Games. It was initially developed as a survival game, but later evolved into a battle royale game. The game is available on various platforms, including Microsoft Windows, macOS, PlayStation 4, PlayStation 5, Xbox One, Xbox Series X/S, Nintendo Switch, and Android. The game has two main modes: Save the World and Battle Royale. In Save the World mode, players cooperate to defend themselves against zombie-like creatures. In Battle Royale mode, up to 100 players fight to be the last person standing on an island. Players can collect resources and build structures to protect themselves from enemy fire. The game is free-to-play but offers in-game purchases for cosmetic items and other upgrades 1.</p>
+        <p>Element 1 is a demonstration of the basic principles of BabylonJS: Shapes, lighting, motion and textures.</p>
       </div>
     </div>
   </div>
@@ -62,9 +62,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Ratchet & Clank is a series of action-adventure platform and third-person shooter video games created and developed by Insomniac Games and published by Sony Interactive Entertainment for PlayStation consoles, such as PlayStation 2, PlayStation 3, PlayStation 4, and PlayStation 51. The series has been highly regarded for its engaging gameplay, humor, and memorable characters. It has gained a large following since its inception.
-
-          The latest installment in the series is Ratchet & Clank: Rift Apart, which was released on July 26, 20232. This game is available on Steam and is the first Ratchet & Clank game to be released on PC2. In this interdimensional adventure, players join Ratchet and Clank as they travel between action-packed worlds to take on an evil emperor from another reality2.</p>
+        <p>Element 2 contains a simple 3D environment using similar principles to Element 1.</p>
         </div>
     </div>
   </div>
@@ -77,9 +75,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Splatoon is a third-person shooter video game franchise created by Hisashi Nogami and Shintaro Sato, and developed and owned by Nintendo1. The franchise made its debut with the release of the first game, Splatoon, on May 28, 20151. The game is primarily a team-based third-person shooter that can be played by up to nine players in online four-versus-four matches2. It also features local one-versus-one multiplayer matches and a single-player campaign2.
-
-          The latest installment in the series is Splatoon 3, which was released on September 9, 20221. The game is available exclusively on the Nintendo Switch family of systems3. In Splatoon 3, players enter the Splatlands, where they can ink their way to the top in online modes like Turf War and Salmon Run3. The game offers a mix of action, strategy, and teamwork as players compete to cover the most territory with their team’s ink2.</p>
+        <p>Element 3 is an example of player animations and physics, which are essential to any 3D game. </p>
         </div>
     </div>
   </div>
@@ -91,16 +87,14 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Splatoon is a third-person shooter video game franchise created by Hisashi Nogami and Shintaro Sato, and developed and owned by Nintendo1. The franchise made its debut with the release of the first game, Splatoon, on May 28, 20151. The game is primarily a team-based third-person shooter that can be played by up to nine players in online four-versus-four matches2. It also features local one-versus-one multiplayer matches and a single-player campaign2.
-
-          The latest installment in the series is Splatoon 3, which was released on September 9, 20221. The game is available exclusively on the Nintendo Switch family of systems3. In Splatoon 3, players enter the Splatlands, where they can ink their way to the top in online modes like Turf War and Salmon Run3. The game offers a mix of action, strategy, and teamwork as players compete to cover the most territory with their team’s ink2.</p>
+        <p>Element 4 is a demonstration of Game User Interafec (GUI) and audio feedback in BabylonJS.</p>
         </div>
     </div>
   </div>
   <div class="card" style="width: 300px;">
     <div class="card-body text-center">
         <h5 class="card-title">About</h5>
-        <p class="card-text">Hello there and welcome to my website! I am a 3rd Year student at UWS. Here, you can see some of the elements I have developed, utilising HTML, CSS, JavaScript and BabylonJS. I hope you enjoy.</p>
+        <p class="card-text">Hello there and welcome to my website! I am a 3rd Year student at UWS. Here, you can see some of the interactive elements I have developed utilising HTML, CSS, JavaScript and BabylonJS. I hope you enjoy.</p>
     </div>
 </div>
 </div>
