--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </div>
   </nav>
 
+  <img src="./public/assets/banner.png" class="rounded mx-auto d-block" alt="...">
+
 <!-- accordian-->
 <div class="accordion" id="accordionExample">
 
