--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Javascript for Games Assessment</h1>
+  <h1>Javascript for Games</h1>
   <p>by Henry Collins</p> 
 </div>
 
@@ -36,8 +36,12 @@
       </div>
     </div>
   </nav>
-
-  <img src="./public/assets/banner.png" class="rounded mx-auto d-block" alt="...">
+<div class="text-center">
+  <figure class="figure">
+    <img src="./public/assets/banner.png" class="figure-img img-fluid rounded" alt="...">
+    <figcaption class="figure-caption">An example of a 3D environment in BabylonJS. (Element 1)</figcaption>
+  </figure>
+</div>
 
 <!-- accordian-->
 <div class="accordion" id="accordionExample">
@@ -93,6 +97,7 @@
         </div>
     </div>
   </div>
+
   <div class="card" style="width: 300px;">
     <div class="card-body text-center">
         <h5 class="card-title">About</h5>
