--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <p>Element 1 is a demonstration of the basic principles of BabylonJS: Shapes, lighting, motion and textures.</p>
+        <p>Element 1 is a demonstration of the basic principles of BabylonJS: shapes, lighting, motion and textures.</p>
       </div>
     </div>
   </div>
